--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="header">
-        <h1 class="header__h1">The Little Taco Shop</h1>
+        <h1 class="header__h1">Little Taco Shop</h1>
         <nav class="header__nav">
             <ul class="header__ul">
                 <li>
@@ -25,6 +25,9 @@
                 </li>
                 <li>
                     <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="hiring.html">Hiring</a>
                 </li>
             </ul>
         </nav>
@@ -44,10 +47,9 @@
         <article class="main__article">
             <h2>Our Location</h2>
             <address>
-                555 Taco Temptation Lane, Suite T<br>
-                Kansas City, MO 55555-5555
+                1059 O.P Fingesi Road, Utako, Abuja.
                 <br><br>
-                Phone: <a href="tel:+5555555555">555-555-5555</a>
+                Phone: <a href="tel:+2349159795794">0915-979-5794</a>
             </address>
         </article>
         <hr>
