--- a/about.html
+++ b/about.html
@@ -25,6 +25,9 @@
                 <li>
                     <a href="contact.html">Contact Us</a>
                 </li>
+                <li>
+                    <a href="hiring.html">Hiring</a>
+                </li>
             </ul>
         </nav>
     </header>
