--- a/hours.html
+++ b/hours.html
@@ -26,6 +26,9 @@
                 <li>
                     <a href="about.html">About</a>
                 </li>
+                <li>
+                    <a href="hiring.html">Hiring</a>
+                </li>
             </ul>
         </nav>
     </header>
